--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase": "^10.4.0",
     "js-cookie": "^3.0.5",
     "mongoose": "^7.5.2",
     "react": "^18.2.0",
@@ -23,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
